src/tests/krate/publish/snapshots/integration__krate__publish__readme__new_krate_with_readme-2.snap
---
source: src/tests/krate/publish/readme.rs
expression: response.json()
---
{
  "crate": {
    "badges": [],
    "categories": null,
    "created_at": "[datetime]",
    "default_version": "1.0.0",
    "description": "description",
    "documentation": null,
    "downloads": 0,
    "exact_match": false,
    "homepage": null,
    "id": "foo_readme",
    "keywords": null,
    "links": {
      "owner_team": "/api/v1/crates/foo_readme/owner_team",
      "owner_user": "/api/v1/crates/foo_readme/owner_user",
      "owners": "/api/v1/crates/foo_readme/owners",
      "reverse_dependencies": "/api/v1/crates/foo_readme/reverse_dependencies",
      "version_downloads": "/api/v1/crates/foo_readme/downloads",
      "versions": "/api/v1/crates/foo_readme/versions"
    },
    "max_stable_version": "1.0.0",
    "max_version": "1.0.0",
    "name": "foo_readme",
    "newest_version": "1.0.0",
    "num_versions": 1,
    "recent_downloads": null,
    "repository": null,
    "trustpub_only": false,
    "updated_at": "[datetime]",
    "versions": null,
    "yanked": false
  },
  "warnings": {
    "invalid_badges": [],
    "invalid_categories": [],
    "other": []
  }
}
